<resources>
    <string name="app_name">CampusPin</string>
    <string name="edit_message">Search by typing in location..</string>
    <string name="button_send">Search</string>
    <string name="button_send2">Search by Photo</string>
    <string name="TxtView_upload">Click to Upload Photo</string>
    <string name="email">Email</string>
    <string name="login_password">Password...</string>
    <string name="button_login">Login</string>
</resources>
