<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.campuspin.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/editText"
        android:layout_width="291dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toLeftOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:onClick="sendMessage"
        android:text="@string/button_send"
        app:layout_constraintLeft_toRightOf="@+id/editText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText" />

    <ImageView
        android:id="@+id/imageToUpload"
        android:layout_width="278dp"
        android:layout_height="278dp"
        android:contentDescription="Click To upload image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="?attr/colorControlHighlight"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintHorizontal_bias="0.503" />

    <Button
        android:id="@+id/bUploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendMessage2"
        android:text="@string/button_send2"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/imageToUpload"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="136dp"
        android:layout_height="15dp"
        android:text="@string/TxtView_upload"
        app:layout_constraintTop_toTopOf="@+id/imageToUpload"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageToUpload"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="@+id/imageToUpload"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageToUpload"
        app:layout_constraintHorizontal_bias="0.493"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

</android.support.constraint.ConstraintLayout>
